--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "globals": "^16.4.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "vite": "npm:rolldown-vite@7.1.14"
+    "vite": "npm:rolldown-vite@^7.1.14"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
