--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ai-recipe-generator",
+  "name": "expensetracker",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -19,7 +19,6 @@
     "@aws-amplify/backend": "^1.17.0",
     "@aws-amplify/backend-cli": "^1.8.0",
     "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
@@ -32,7 +31,6 @@
     "globals": "^16.4.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
   }
 }
