--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@aws-amplify/ui-react": "^6.13.1",
     "aws-amplify": "^6.15.7",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "vite": "^7.1.7"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.17.0",
@@ -30,7 +31,6 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3",
-    "vite": "^7.1.7"
+    "typescript": "^5.9.3"
   }
 }
